fix: Fix bottom issue on mobile devices

--- a/app/navigation/style.css
+++ b/app/navigation/style.css
@@ -487,6 +487,6 @@ p.footer a:hover {
 
     .bg-bubbles,
     .wrapper {
-        height: auto;
+        height: 100%;
     }
 }
